tooling/nargo_cli/tests/snapshots/compile_failure/dep_impl_primitive/execute__tests__dep_impl_primitive_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
warning: unused import bad_impl
  ┌─ src/main.nr:1:5
  │
1 │ use bad_impl;
  │     -------- unused import
  │

error: Non-struct type used in impl
  ┌─ test_programs/test_libraries/bad_impl/src/lib.nr:1:6
  │
1 │ impl Field {
  │      ----- Only struct types may have implementation methods
  │

error: No method named 'something' found for type 'Field'
  ┌─ src/main.nr:4:5
  │
4 │     x.something();
  │     -------------
  │

Aborting due to 2 previous errors
